--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,1 +1,31 @@
 
+name: Generate Snake
+
+on:
+  schedule: # Ejecuta todos los días a medianoche UTC
+    - cron: "0 0 * * *"
+  workflow_dispatch: # Permite correrlo manualmente desde Actions
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Generate Snake
+        uses: Platane/snk@v3
+        with:
+          github_user_name: TU-USUARIO
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+
+      - name: Push snake animation to output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
